--- a/cobacss.css
+++ b/cobacss.css
@@ -9,6 +9,7 @@ header{
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
+
 }
 
 ul{
@@ -108,5 +109,65 @@ ul li ul li a{
 	color: #000;
 }
 
+.footer
+{
 	
+	font-family: sans-serif;
+	background-color: #fff;
+	color: #000;
+	top: 100%;
+	position:absolute;
+	left:25%;
+	
+	
+}
+
+@media screen and (max-width: 100px){
+	header{
+		width : 100%;
+	}
+	.main{
+		width: 50%;
+	}
+	.btn{
+		width:100%;
+	}
+	.logo{
+		width: 10%;
+	}
+	.title{
+		width:100%;
+	}
+	.titile h1{
+		width: 35%;
+	}
+	.title h2{
+		width: 50%;
+		height:100%;
+	}
+}
+	@media screen and (max-width: 720px){
+		header{
+		width : 100%;
+	}
+	.main{
+		width: 50%;
+	}
+	.btn{
+		width:100%;
+	}
+	.logo{
+		width: 10%;
+	}
+	.title{
+		width:100%;
+	}
+	.titile h1{
+		width: 35%;
+	}
+	.title h2{
+		width: 50%;
+		height:100%;
+	}
+	}
 	
