--- a/cobacss1.css
+++ b/cobacss1.css
@@ -72,14 +72,15 @@ body{
 
 .btn{
 	display: inline-block;
-	width: 100%;
+	width: 400px;
 	background: none;
 	border: 4px solid red;
 	color: #fff;
-	padding: 14px 0;
+	padding: 15px 0;
 	font-size: 15px;
 	cursor: pointer;
 	margin-top: 8px;
 	text-transform: uppercase;
+	
 	
 }
